--- a/style/style.css
+++ b/style/style.css
@@ -80,8 +80,8 @@ li {
   display: block;
   width: max-content;
   margin: 0 auto;
-  background-color: #2c5282;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   padding: 0.75rem 1.5rem;
   border-radius: 4px;
   text-decoration: none;
